Mon Sep 23 20:13:57 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/Makefile.am src/dblib/Makefile.am src/odbc/Makefile.am
	  src/pool/Makefile.am src/tds/Makefile.am:
	- Build a libtool convenience library "libtds_objects.la".  Use that
	  to pull the tds object files into the other libraries, so every
	  copy of Makefile.am doesn't need a synchronized list of objects.

Mon Sep 23 19:46:03 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/ctlib.h include/ctpublic.h src/ctlib/ct.c
	  src/ctlib/ctutil.c src/ctlib/unittests/.cvsignore
	  src/ctlib/unittests/Makefile.am src/ctlib/unittests/common.c
	  src/ctlib/unittests/common.h
	  src/ctlib/unittests/t0008.c (added):
	- Distinguish between server and client message callbacks in ctlib,
	  and handle each approriately.
	- Return CS_SUCCEED by default when ctlib callbacks aren't installed.
	- Add a new unit test to check callback functionality.

Mon Sep 23 19:01:48 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h.in src/apps/tsql.c src/dblib/dbutil.c
	  src/odbc/odbc.c src/tds/mem.c src/tds/token.c
	  src/ctlib/ctutil.c:
	- Do away with tds_reset_msg_info.  Move the important
	  parts into tds_free_msg.
	- Relocate call to tds_free_msg() in tds_process_msg() so that
	  we can safely reuse the msg_info structure to call the
	  client message handler if required.

Mon Sep 23 18:55:48 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/util.c:
	- in tdsdump_close(), make it allowable to close even if not
	  already opened.
	- in tdsdump_open(), always try to close before opening so
	  we don't leak file descriptors.

Mon Sep 23 11:09:16 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/server/server.h:
	- standardize format of server.h include file.

Mon Sep 23 08:17:28 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix core by DataManager
	* src/server/Makefile.am: distribute even server.h
	* freetds.spec.in:
	- add doc package for userguide
	- add *.la files to rpm