@@ -21,9 +21,9 @@
 #include <unistd.h>
 #include "tds.h"
 #include "tdsutil.h"
-#include "server.h"
+#include "tdssrv.h"
 
-static char  software_version[]   = "$Id: login.c,v 1.8 2002/09/20 21:08:35 castellano Exp $";
+static char  software_version[]   = "$Id: login.c,v 1.9 2002/09/24 00:21:56 castellano Exp $";
 static void *no_unused_var_warn[] = {software_version,
                                      no_unused_var_warn};
 
